# Algernon

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  MYTEST.sln  README.md  version.mk
MYTEST/: MYTEST.cpp  MYTEST.vcxproj  MYTEST.vcxproj.filters
inc/: algernon.h  aura.h  version.h.in
inc/algernon/: algernon.h
inc/algernon/cv/: ximage_io.h
inc/algernon/file/: xfile.h  xpath.h
inc/algernon/log/: xerror.h  xlogger.h
inc/algernon/memory/: xbuffer.h
inc/algernon/perf/: xtracer.h
inc/algernon/sys/: xdlib.h  xplatform.h
inc/algernon/threadpool/: xthread_flow.impl.h  xthreadpool.impl.h
inc/cv/: ximage.h  ximage_io.h
inc/file/: xfile.h  xpath.h
inc/json/: xjson.h
inc/log/: xerror.h  xlogger.h
inc/math/: xmath.h
inc/perf/: xtimer.h  xtimer2.h  xtimer3.h  xtracer.h  xtracer2.h  xtracer4.h
inc/regex/: xregex.h
inc/sys/: xdlib.h  xplatform.h
inc/threadpool/: xthread_flow.h  xthread_flow.impl.h  xthreadpool.h  xthreadpool.impl.h
inc/util/: xargs.h
lib/opencv/x64/vc16/lib/: OpenCVModules-debug.cmake  OpenCVModules-release.cmake  opencv_world453.lib  opencv_world453d.lib
src/: CMakeLists.txt  MYTEST.h  main.cpp  main.json
src/caddies/cv/: ximage.cpp  ximage.h  ximage_io.h
src/caddies/file/: xfile.cpp  xfile.h
src/caddies/log/: logger.h
src/caddies/math/: xmath.h
src/cv/: ximage.cpp  ximage.h  ximage_io.h
src/file/: xfile.cpp  xfile.h  xpath.cpp
src/flow/: xthread_flow.h  xthread_flow.impl.h  xthreadpool.h  xthreadpool.impl.h
src/gpu_helper/: cl_hpp_test.cpp  cl_symbols.cpp  cl_symbols.h  cl_wrapper.cpp  cl_wrapper.h
src/json/: xjson.cpp
src/log/: logger.h  xlogger.cpp
src/memory/: xbuffer.h
src/myCL/: cl_wrapper.cpp  cl_wrapper.h
src/myCV/: myCV.cpp  myCV.h
src/myGL/: shader.h
src/myUtils/: logger.cpp  logger.h  myUtils.cpp  myUtils.h
src/perf/: xperf4_macros.h  xtimer.cpp  xtimer.h  xtimer0.cpp  xtimer0.h  xtimer1.cpp  xtimer1.h  xtimer2.cpp  xtimer2.h  xtimer3.cpp  xtimer4.cpp  xtimer4.h  xtracer.cpp  xtracer0.cpp  xtracer0.h  xtracer1.cpp  xtracer1.h  xtracer2.cpp  xtracer2.h  xtracer3.cpp  xtracer3.h  xtracer4.cpp
src/projects/opencl/: filters.cl  filters_cl.cpp
src/projects/opengl/: lighting_maps.fs  shader.fs  test_gl.cpp
src/regex/: xregex.cpp  xregex.h
src/run/: main.cpp
src/sys/: xdlib.cpp  xdlib.h  xplatform.cpp
src/test_opencl/: cl_wrapper.h  test_opencl.cpp
src/util/: xargs.cpp
test/: main.cpp  test_helpers.h  test_xargs.cpp  test_xbuffer.cpp  test_xerror.cpp  test_xfile.cpp  test_xflow.cpp  test_ximage.cpp  test_xlogger.cpp  test_xmath.cpp  test_xpath.cpp  test_xplatform.cpp  test_xregex.cpp  test_xtimer.cpp  test_xtimer0.cpp  test_xtimer1.cpp  test_xtimer2.cpp  test_xtimer3.cpp  test_xtimer4.cpp  test_xtracer.cpp  test_xtracer0.cpp  test_xtracer1.cpp  test_xtracer2.cpp  test_xtracer3.cpp  test_xtracer4.cpp
