set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(test)

target_include_directories(test PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies/cv
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies/ext
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies/file
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies/json
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies/log
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies/memory
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies/perf
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies/regex
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies/threadpool
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies/util
    ${CMAKE_CURRENT_SOURCE_DIR}/gpu_helper
    ${CMAKE_CURRENT_SOURCE_DIR}/gtest
    ${CMAKE_CURRENT_SOURCE_DIR}/gtest/include
    ${CMAKE_CURRENT_SOURCE_DIR}/gtest/src
)

file(GLOB_RECURSE sources 
    # ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies/**/*.c 
    ${CMAKE_CURRENT_SOURCE_DIR}/caddies/**/*.cpp 
    ${CMAKE_CURRENT_SOURCE_DIR}/gpu_helper/*.cpp 
    ${CMAKE_CURRENT_SOURCE_DIR}/gtest/src/*.cpp 
    ${CMAKE_CURRENT_SOURCE_DIR}/run/*.cpp
)

target_sources(test PRIVATE ${sources})

# version
# 检查版本变量是否定义
if(NOT DEFINED ALGERNON_VERSION_MAJOR OR 
   NOT DEFINED ALGERNON_VERSION_MINOR OR 
   NOT DEFINED ALGERNON_VERSION_REVISION OR 
   NOT DEFINED ALGERNON_VERSION)
    message(FATAL_ERROR "Version variables are not defined. Please set ALGERNON_VERSION_MAJOR, ALGERNON_VERSION_MINOR, ALGERNON_VERSION_REVISION, and ALGERNON_VERSION.")
endif()

target_compile_definitions(test PRIVATE 
    ALGERNON_VERSION_MAJOR=${ALGERNON_VERSION_MAJOR}
    ALGERNON_VERSION_MINOR=${ALGERNON_VERSION_MINOR}
    ALGERNON_VERSION_REVISION=${ALGERNON_VERSION_REVISION}
    ALGERNON_VERSION="${ALGERNON_VERSION}"
)
